# miaumiau

./: bubble_sort.cpp  heap_sort.cpp  main.cpp  merge_sort.cpp  quick_sort.cpp  sortowe_pomiary.txt  sorts.cpp  sorts.h
AISD/cykle/: cykle.py  graf_bez_cykli.txt  graf_euler_niesk.txt  graf_hamilton_niesk.txt  graf_hamilton_tylko.txt  graf_hamilton_wyklad.txt
AISD/drzewa/: drzewa.cpp  drzewa.h  drzewowe_pomiary.txt  main.cpp  main_d.cpp  testy.cpp
AISD/grafy/: dag_n1000_sat50_4880.txt  dag_n100_sat50_8961.txt  dag_n1100_sat50_2218.txt  dag_n1200_sat50_6059.txt  dag_n1300_sat50_6362.txt  dag_n1400_sat50_1981.txt  dag_n200_sat50_7752.txt  dag_n300_sat50_8863.txt  dag_n400_sat50_6448.txt  dag_n500_sat50_6840.txt  dag_n600_sat50_7317.txt  dag_n700_sat50_2830.txt  dag_n800_sat50_8438.txt  dag_n900_sat50_6071.txt  g100.txt  g1000.txt  g1100.txt  g1200.txt  g1300.txt  g1400.txt  g200.txt  g300.txt  g400.txt  g500.txt  g600.txt  g700.txt  g800.txt  g900.txt  generator_grafow.py  grafy.py  konwerter.py  pomiary.txt  przykladowy_graf.txt
AISD/plecak/: e1.txt  greedy_quality_analysis.csv  main.cpp  p1.txt  p2.txt  p3.txt  temp_test.txt  time_vs_capacity.csv  time_vs_items.csv  time_vs_n_and_b.csv  wyklad.txt
AISD/sortowanie/: insertion_sort.cpp  main.cpp  quick_sort.cpp  selection_sort.cpp  (+3 more)
inne/: cmain.cpp  szachy.cpp  szachy.h
linux/: addshebang.sh  bup.sh  calc.sh  chcase.sh  checkuser.sh  greet.sh  its.sh  kwadrat.sh  lowercase.sh  pakowarka.sh  rename.sh  silnia.sh  watchfile.sh
projekt_onie/: CMakeLists.txt  test.cpp
zadania_niskopoziomowe/: counting_digits.cpp
(+14 files in other folders)
